crates/zizmor/tests/integration/snapshots/integration__config__disablement.snap
---
source: crates/zizmor/tests/integration/config.rs
assertion_line: 183
expression: "zizmor().input(input_under_test(\"config-scenarios/disablement\")).setenv(\"RUST_LOG\",\n\"zizmor::audit=debug\").output(OutputMode::Both).run()?"
---
🌈 zizmor v@@VERSION@@
DEBUG audit{input=Workflow(file://@@INPUT@@/.github/workflows/hackme.yml)}: zizmor::audit: skipping: template-injection is disabled in config for group Group("@@INPUT@@")
No findings to report. Good job! (2 suppressed)
