crates/zizmor/tests/integration/snapshots/integration__config__discovers_config_in_root.snap
---
source: crates/zizmor/tests/integration/config.rs
expression: "zizmor().input(input_under_test(\"config-scenarios/config-in-root\")).run()?"
snapshot_kind: text
---
No findings to report. Good job! (1 ignored, 1 suppressed)
