crates/zizmor/tests/integration/snapshots/integration__config__ignores_config_in_root.snap
---
source: crates/zizmor/tests/integration/config.rs
assertion_line: 63
expression: "zizmor().no_config(true).input(input_under_test(\"config-scenarios/config-in-root\")).setenv(\"RUST_LOG\",\n\"zizmor::config=debug\").output(OutputMode::Both).run()?"
---
🌈 zizmor v@@VERSION@@
DEBUG zizmor::config: skipping config discovery: explicitly disabled
error[template-injection]: code injection via template expansion
  --> @@INPUT@@/.github/workflows/hackme.yml:16:40
   |
13 |       - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # tag=v7.0.1
   |         -------------------------------------------------------------------- action accepts arbitrary code
14 |         with:
15 |           script: |
   |           ------ via this input
16 |             return "doing a thing: ${{ github.event.issue.title }}"
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

4 findings (3 suppressed): 0 informational, 0 low, 0 medium, 1 high
