crates/zizmor/tests/integration/snapshots/integration__config__invalid_configs-2.snap
---
source: crates/zizmor/tests/integration/config.rs
expression: "zizmor().expects_failure(true).input(input_under_test(\"neutral.yml\")).config(input_under_test(\"config-scenarios/zizmor.invalid-schema-2.yml\")).output(OutputMode::Stderr).run()?"
---
🌈 zizmor v@@VERSION@@
fatal: no audit was performed
error: configuration error in @@CONFIG@@
  |
  = help: check the configuration for the 'forbidden-uses' rule
  = help: see: https://docs.zizmor.sh/audits/#forbidden-uses-configuration

Caused by:
    0: configuration error in @@CONFIG@@
    1: invalid syntax for audit `forbidden-uses`
    2: data did not match any variant of untagged enum ForbiddenUsesConfig
